--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "10.4.16",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -55,7 +55,7 @@
     "lucide-react": "^0.364.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
-    "postcss": "^8",
+    "postcss": "8.4.31",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
@@ -64,7 +64,7 @@
     "recharts": "^2.12.4",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
