--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@vercel/edge-config": "^0.4.1",
-    "autoprefixer": "10.4.16",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -46,11 +44,14 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@vercel/edge-config": "^0.4.1",
+    "autoprefixer": "10.4.16",
     "caniuse-lite": "1.0.30001281",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.364.0",
