--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.49.4",
     "@vercel/edge-config": "^0.4.1",
     "autoprefixer": "10.4.16",
     "caniuse-lite": "1.0.30001281",
