--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,18 @@ SUPABASE-RLS-PLAN.md
 
 # VS Code configuration
 .vsconfig
+
+# Environment variables and secrets
 .env.local
+.env.*.local
+
+# Build and cache directories
+.next/
+out/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
